<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="300dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <Button
        android:id="@+id/button"

        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:background="@drawable/login_layot_background"
        android:text="@string/reg_string1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintEnd_toStartOf="@+id/first_line"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/second_line"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.413" />

    <View
        android:id="@+id/first_line"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintEnd_toEndOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.468" />

    <View
        android:id="@+id/second_line"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintStart_toStartOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@drawable/login_layot_background"
        android:text="@string/reg_string2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="380dp"
        android:background="#4091ECF2"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="38dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_edit_text"

        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="#4091ECF2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        app:layout_constraintVertical_bias="0.084" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="@+id/email_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_edit_text"
        app:srcCompat="@drawable/ic_baseline_email_24" />

</androidx.constraintlayout.widget.ConstraintLayout>